--- a/package.json
+++ b/package.json
@@ -19,7 +19,10 @@
   },
   "dependencies": {
     "@emotion/react": "^11.13.3",
+    "body-parser": "^1.20.3",
+    "cors": "^2.8.5",
     "electron-updater": "^6.8.3",
+    "express": "^4.21.2",
     "framer-motion": "^11.5.4",
     "lucide-react": "0.522.0",
     "react": "^18.3.1",
@@ -50,11 +53,37 @@
       "dist/**/*",
       "electron/**/*",
       "backend/**/*",
-      "config/**/*",
-      "kicomav-master/**/*",
-      "vendor/clamav-runtime/**/*",
-      "scripts/windows/**/*",
       "package.json"
+    ],
+    "extraResources": [
+      {
+        "from": "config",
+        "to": "config",
+        "filter": [
+          "**/*"
+        ]
+      },
+      {
+        "from": "kicomav-master",
+        "to": "kicomav-master",
+        "filter": [
+          "**/*"
+        ]
+      },
+      {
+        "from": "vendor/clamav-runtime",
+        "to": "vendor/clamav-runtime",
+        "filter": [
+          "**/*"
+        ]
+      },
+      {
+        "from": "scripts/windows",
+        "to": "scripts/windows",
+        "filter": [
+          "**/*"
+        ]
+      }
     ],
     "directories": {
       "buildResources": "build",
@@ -65,7 +94,14 @@
         "nsis",
         "portable"
       ],
-      "icon": "asset/icon.png"
+      "icon": "asset/icon.png",
+      "requestedExecutionLevel": "requireAdministrator"
+    },
+    "nsis": {
+      "oneClick": true,
+      "allowElevation": true,
+      "perMachine": true,
+      "runAfterFinish": true
     },
     "publish": [
       {
